feat: add offline-recommender8001 service

--- a/provider-offline-recommender8001/src/main/resources/application.yml
+++ b/provider-offline-recommender8001/src/main/resources/application.yml
@@ -5,5 +5,6 @@ spring:
     name: cloud-recommender-service
   data:
     mongodb:
-      uri: "mongodb://192.168.40.137:27017"
-      database: "recommender"
+      uri: "mongodb:192.168.40.137"
+      port: 27017
+
