--- a/provider-offline-recommender8001/pom.xml
+++ b/provider-offline-recommender8001/pom.xml
@@ -40,8 +40,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver</artifactId>
+            <version>3.5.0</version>
         </dependency>
     </dependencies>
 </project>
