--- a/provider-offline-recommender8001/pom.xml
+++ b/provider-offline-recommender8001/pom.xml
@@ -41,7 +41,7 @@
         </dependency>
         <dependency>
             <groupId>org.mongodb</groupId>
-            <artifactId>mongodb-driver</artifactId>
+            <artifactId>mongo-java-driver</artifactId>
             <version>3.5.0</version>
         </dependency>
     </dependencies>
