--- a/provider-offline-recommender8001/src/main/resources/application.yml
+++ b/provider-offline-recommender8001/src/main/resources/application.yml
@@ -5,6 +5,7 @@ spring:
     name: cloud-recommender-service
   data:
     mongodb:
-      uri: "mongodb:192.168.40.137"
+      uri: "127.0.0.1"
       port: 27017
+
 
