--- a/consumer-recommender80/src/main/resources/application.yml
+++ b/consumer-recommender80/src/main/resources/application.yml
@@ -1,2 +1,19 @@
 server:
   port: 80
+spring:
+  application:
+    name: CLOUD-RECOMMENDER-CONSUMER
+  cloud:
+    nacos:
+      discovery:
+        server-addr: localhost:8848  #配置nacos地址
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
+ribbon:
+  ReadTimeout: 5000
+  ConnectionTimeout: 5000
+  NFLoadBalancerRuleClassName: com.netflix.loadbalancer.BestAvailableRule
