add: nacos and sentinel for 80

--- a/consumer-recommender80/src/main/resources/application.yml
+++ b/consumer-recommender80/src/main/resources/application.yml
@@ -1,2 +1,12 @@
 server:
   port: 80
+spring:
+  application:
+    name: cloud-consumer-service
+  cloud:
+    nacos:
+      discovery:
+        server-addr: localhost:8848 #配置nacos地址
+feign:
+  sentinel:
+    enabled: true
