--- a/provider-offline-recommender8002/pom.xml
+++ b/provider-offline-recommender8002/pom.xml
@@ -5,7 +5,10 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>provider-offline-recommender8002</artifactId>
+    <artifactId>provider-offline-recommender8001</artifactId>
+
+
+
 
 
     <parent>
@@ -47,6 +50,16 @@
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+        <!--   sentinel     -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+        </dependency>
+        <!--    后续做持久化用到  P137课  -->
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-datasource-nacos</artifactId>
         </dependency>
     </dependencies>
 </project>
