--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,10 @@
 
     <modules>
         <module>provider-offline-recommender8001</module>
-        <module>provider-offline-recommender8002</module>
         <module>consumer-recommender80</module>
         <module>provider-user-recommender8007</module>
+        <module>cloud-api-commons</module>
+        <module>provider-streaming-recommender8008</module>
     </modules>
 
     <!-- 统一Jar版本 -->
@@ -72,6 +73,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.2.10.RELEASE</version>
                 <configuration>
                     <fork>true</fork>
                     <addResources>true</addResources>
