--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
                 <version>${lombok.version}</version>
                 <optional>true</optional>
             </dependency>
+            <dependency>
+                <groupId>com.rai.springcloud</groupId>
+                <artifactId>cloud-api-commons</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
