--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,9 @@
         <module>provider-offline-recommender8001</module>
         <module>consumer-recommender80</module>
         <module>provider-user-recommender8007</module>
-        <module>cloud-api-commons</module>
+        <module>gateway-gateway9527</module>
         <module>provider-streaming-recommender8008</module>
+        <module>cloud-api-commons</module>
     </modules>
 
     <!-- 统一Jar版本 -->
@@ -78,7 +79,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.2.10.RELEASE</version>
                 <configuration>
                     <fork>true</fork>
                     <addResources>true</addResources>
